Fix iOS header overlap over inputs

--- a/src/common/styles/cordova.scss
+++ b/src/common/styles/cordova.scss
@@ -1,10 +1,6 @@
 //make space for statusbar
 body.ios {
-  header > nav {
-    margin-top: 18px;
-  }
-
   .bar-nav ~ .content {
-    padding-top: 60px;
+    padding-top: 44px;
   }
 }
