--- a/src/samples/list/styles.scss
+++ b/src/samples/list/styles.scss
@@ -100,7 +100,7 @@
         width: 7px;
         height: 100%;
         margin: 0;
-        background-color: $color-green-dark;
+        background-color: $color-blue-dark;
         z-index: 100;
         position: absolute;
         left: 0;
